src/test/deca/context/valid/ContextAvecObjet/Cast/floatCastInt.deca
//Description
//  Cast d'un int en float
//
//Réponse
//  ok
{
    int a = 1;
    float x = (float)(a);
}